MERMAID_ER_DIAGRAM = """
# HBnB Entity-Relationship Diagram

```mermaid
erDiagram
    USER {
        string id PK
        string first_name
        string last_name
        string email UK
        string password
        boolean is_admin
        datetime created_at
        datetime updated_at
    }
    
    PLACE {
        string id PK
        string title
        text description
        float price
        float latitude
        float longitude
        string owner_id FK
        datetime created_at
        datetime updated_at
    }
    
    REVIEW {
        string id PK
        text text
        integer rating
        string place_id FK
        string user_id FK
        datetime created_at
        datetime updated_at
    }
    
    AMENITY {
        string id PK
        string name UK
        datetime created_at
        datetime updated_at
    }
    
    PLACE_AMENITY {
        string place_id FK
        string amenity_id FK
    }
    
    USER ||--o{ PLACE : owns
    USER ||--o{ REVIEW : writes
    PLACE ||--o{ REVIEW : receives
    PLACE }o--o{ AMENITY : has
    PLACE ||--o{ PLACE_AMENITY : ""
    AMENITY ||--o{ PLACE_AMENITY : ""
```

## Relationships Explanation:

### One-to-Many Relationships:
- **User → Places**: One user can own multiple places
- **User → Reviews**: One user can write multiple reviews
- **Place → Reviews**: One place can have multiple reviews

### Many-to-Many Relationships:
- **Place ↔ Amenities**: A place can have multiple amenities, and an amenity can be associated with multiple places

### Constraints:
- **Email uniqueness**: Each user must have a unique email
- **Amenity name uniqueness**: Each amenity must have a unique name  
- **One review per user per place**: Enforced by unique constraint on (user_id, place_id)
- **Rating validation**: Rating must be between 1 and 5
- **Price validation**: Price must be greater than 0
- **Coordinate validation**: Latitude (-90 to 90), Longitude (-180 to 180)
"""